[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovart-reverse"
version = "0.2.0"
description = "Local reverse-engineering helpers for Lovart web requests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1",
]

[project.optional-dependencies]
reverse = [
    "mitmproxy>=11.0.2",
]

[project.scripts]
lovart = "lovart_reverse.cli.main:main"
lovart-mcp = "lovart_reverse.mcp.server:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["lovart_reverse*"]

[tool.setuptools.package-data]
lovart_reverse = ["signing/*.js", "data/ref/*.json", "data/ref/lovart_static_assets/*.wasm"]
