[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovart-reverse"
version = "2.0.0-dev"
description = "Lovart browser capture and credential extraction tools."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1",
]

[project.optional-dependencies]
reverse = [
    "mitmproxy>=11.0.2",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
lovart-reverse = "lovart_reverse.cli.main:main"

[tool.setuptools.packages.find]
include = ["lovart_reverse*"]
